--- a/ContentCuration/build.xml
+++ b/ContentCuration/build.xml
@@ -16,19 +16,17 @@
 	  </presetdef>
 	
 	
-	<property name="freenet-cvs-snapshot.location" location="/Users/sanve/git/fred-official/dist/freenet.jar"/>
-	<property name="freenet-ext.location" location="/Users/sanve/git/fred-official/lib/freenet/freenet-ext.jar"/>
-	<property name="library.location" location="/Users/sanve/git/plugin-Library-staging/dist/Library.jar"/>
+	<property name="freenet-cvs-snapshot.location" location="../../fred-staging/dist/freenet.jar"/>
+	<property name="freenet-ext.location" location="../../fred-staging/lib/freenet/freenet-ext.jar"/>
+	<property name="library.location" location=".../../plugin-Library-staging/dist/Library.jar"/>
 	<property name="source-version" value="1.6"/>
 	<property name="target-version" value="1.6"/>
 	
     <property name="src.dir"     value="src"/>
 
     <property name="build.dir"   value="build"/>
-	<!--property name="build" location="build/"/-->
 	<property name="dist.dir" value="dist/"/>
-    <!--property name="jar.dir"     value="${dist}/jar"/-->
-	<property name="classes.dir" value="${build.dir}/classes"/>
+    <property name="classes.dir" value="${build.dir}/classes"/>
    <property name="packagebase" value="plugins.ccuration" />
 
 	<path id="lib.path">
