adding messages for ui fixing bugs to get Version fixing bugs for CurateFreenetWebPage

--- a/ContentCuration/build.xml
+++ b/ContentCuration/build.xml
@@ -38,6 +38,24 @@
 		<pathelement location="${freenet-cvs-snapshot.location}"/>
 	</path>
 
+	<!-- Originally from Library's build script -->
+	<exec executable="git"
+		failifexecutionfails="false"
+		errorProperty="git.errror"
+		outputproperty="git.describe"
+		resultproperty="git.result">
+		<arg value="describe" />
+		<arg value="--always" />
+		<arg value="--abbrev=7" />
+		<arg value="--dirty" />
+	</exec>
+	<condition property="git.revision" value="${git.describe}" else="@unknown@">
+		<and>
+			<equals arg1="${git.result}" arg2="0" />
+			<isset property="git.describe" />
+		</and>
+	</condition>
+	
     <target name="clean">
         <delete dir="${build.dir}"/>
     	<delete dir="${dist.dir}"/>
